# mditor

./: Cargo.toml  README.md
.github/workflows/: mditor-ci.yml  mditor-release.yml  prism-ci.yml  prism-release.yml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  vim.json
assets/settings/: default.json
assets/themes/catppuccin-blur/: catppuccin-blur.json
assets/themes/macos-classic/: macos-classic.json
crates/acp_thread/src/: mention.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_configuration.rs  agent_model_selector.rs  agent_panel.rs  agent_registry_ui.rs  agent_ui.rs  completion_provider.rs  config_options.rs  conversation_view.rs  language_model_selector.rs  message_editor.rs  mode_selector.rs  model_selector.rs  model_selector_popover.rs  profile_selector.rs  sidebar.rs  slash_command_picker.rs  text_thread_editor.rs  text_thread_history.rs  thread_history_view.rs  threads_archive_view.rs  ui.rs
crates/agent_ui/src/agent_configuration/: add_llm_provider_modal.rs  configure_context_server_modal.rs  manage_profiles_modal.rs
crates/agent_ui/src/conversation_view/: thread_view.rs
crates/agent_ui/src/ui/: agent_notification.rs  hold_for_default.rs  model_selector_components.rs  undo_reject_toast.rs
crates/assistant_slash_command/: Cargo.toml
crates/assistant_slash_command/src/: assistant_slash_command.rs
crates/client/src/: client.rs  zed_urls.rs
crates/copilot_chat/src/: copilot_chat.rs
crates/copilot_ui/src/: sign_in.rs
crates/editor/src/: items.rs  mouse_context_menu.rs
crates/git_ui/: Cargo.toml
crates/git_ui/src/: git_panel.rs
crates/gpui_web/src/: window.rs
crates/install_cli/src/: install_cli_binary.rs  register_zed_scheme.rs
crates/json_schema_store/: Cargo.toml
crates/json_schema_store/src/: json_schema_store.rs
crates/language_models/: Cargo.toml
crates/language_models/src/: language_models.rs
crates/language_models/src/provider/: cloud.rs
crates/markdown_preview/src/: markdown_preview_view.rs
crates/outline_panel/: Cargo.toml
crates/outline_panel/src/: outline_panel.rs
crates/paths/src/: paths.rs
crates/project/: Cargo.toml
crates/project/src/: agent_server_store.rs  context_server_store.rs
crates/project/src/context_server_store/: registry.rs
crates/project/tests/integration/: context_server_store.rs  project_tests.rs
crates/recent_projects/: Cargo.toml
crates/recent_projects/src/: recent_projects.rs  remote_connections.rs  remote_servers.rs
crates/release_channel/src/: lib.rs
crates/remote_connection/: Cargo.toml
crates/remote_connection/src/: remote_connection.rs
crates/settings_ui/: Cargo.toml
crates/settings_ui/src/: page_data.rs  pages.rs  settings_ui.rs
crates/settings_ui/src/components/: dropdown.rs  input_field.rs  ollama_model_picker.rs
crates/settings_ui/src/pages/: tool_permissions_setup.rs
crates/snippet_provider/src/: lib.rs
crates/theme_selector/src/: icon_theme_selector.rs  theme_selector.rs
crates/time_format/src/: time_format.rs
crates/title_bar/: Cargo.toml
crates/title_bar/src/: application_menu.rs  collab.rs  title_bar.rs  title_bar_settings.rs
crates/ui/src/components/: tab.rs
crates/ui/src/components/notification/: alert_modal.rs
crates/ui/src/utils/: constants.rs
crates/util/src/: util.rs
crates/util_macros/: Cargo.toml
crates/util_macros/src/: util_macros.rs
crates/vim/: Cargo.toml
crates/vim/src/: command.rs
crates/workspace/src/: invalid_item_view.rs  security_modal.rs  status_bar.rs  toolbar.rs  welcome.rs
crates/zed/: Cargo.toml  build.rs
crates/zed/resources/flatpak/: zed.metainfo.xml.in
crates/zed/resources/info/: DocumentTypes.plist
crates/zed/resources/windows/: zed.iss
crates/zed/src/: main.rs  visual_test_runner.rs  zed.rs
crates/zed/src/zed/: app_menus.rs  open_listener.rs  open_url_modal.rs  quick_action_bar.rs  visual_tests.rs  windows_only_instance.rs
crates/zed/src/zed/quick_action_bar/: preview.rs
