[package]
name = "remote_connection"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/remote_connection.rs"

[features]
default = []
test-support = ["remote/test-support"]

[dependencies]
anyhow.workspace = true
askpass.workspace = true
client.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
log.workspace = true
markdown.workspace = true
menu.workspace = true
paths.workspace = true
release_channel.workspace = true
remote.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
smol.workspace = true
theme.workspace = true
ui.workspace = true
ui_input.workspace = true
workspace.workspace = true
