[package]
description = "A focused Markdown editor with integrated AI agent workflows."
edition.workspace = true
name = "zed"
version = "1.0.1"
publish.workspace = true
license = "GPL-3.0-or-later"
authors = ["leisure462"]
homepage = "https://github.com/leisure462/mditor"
repository = "https://github.com/leisure462/mditor"
default-run = "prism"

[lints]
workspace = true

[features]
tracy = ["ztracing/tracy"]
test-support = [
    "gpui/test-support",
    "gpui_platform/screen-capture",
    "dep:image",
    "workspace/test-support",
    "project/test-support",
    "editor/test-support",
    "terminal_view/test-support",
    "image_viewer/test-support",
    "recent_projects/test-support",
    "title_bar/test-support",
]
visual-tests = [
    "gpui/test-support",
    "gpui_platform/screen-capture",
    "gpui_platform/test-support",
    "dep:image",
    "dep:tempfile",
    "dep:action_log",
    "dep:agent_servers",
    "workspace/test-support",
    "project/test-support",
    "editor/test-support",
    "terminal_view/test-support",
    "image_viewer/test-support",
    "clock/test-support",
    "acp_thread/test-support",
    "action_log/test-support",
    "agent_ui/test-support",
    "db/test-support",
    "agent/test-support",
    "language_model/test-support",
    "fs/test-support",
    "recent_projects/test-support",
    "title_bar/test-support",
]

[[bin]]
name = "prism"
path = "src/main.rs"

[[bin]]
name = "prism_visual_test_runner"
path = "src/visual_test_runner.rs"
required-features = ["visual-tests"]

[dependencies]
acp_tools.workspace = true
agent.workspace = true
agent-client-protocol.workspace = true
agent_settings.workspace = true
agent_ui.workspace = true
anyhow.workspace = true
askpass.workspace = true
assets.workspace = true
breadcrumbs.workspace = true
chrono.workspace = true
clap.workspace = true
cli.workspace = true
client.workspace = true
collections.workspace = true
command_palette.workspace = true
component.workspace = true
copilot_chat.workspace = true
crashes.workspace = true
db.workspace = true
editor.workspace = true
encoding_selector.workspace = true
env_logger.workspace = true
feature_flags.workspace = true
file_finder.workspace = true
fs.workspace = true
futures.workspace = true
git.workspace = true
git_hosting_providers.workspace = true
git_ui.workspace = true
go_to_line.workspace = true
system_specs.workspace = true
gpui.workspace = true
gpui_platform = {workspace = true, features=["screen-capture", "font-kit", "wayland", "x11"]}
image = { workspace = true, optional = true }
semver.workspace = true
tempfile = { workspace = true, optional = true }
clock = { workspace = true, optional = true }
acp_thread.workspace = true
action_log = { workspace = true, optional = true }
agent_servers = { workspace = true, optional = true }
gpui_tokio.workspace = true
rayon.workspace = true

http_client.workspace = true
image_viewer.workspace = true
install_cli.workspace = true
language.workspace = true
language_model.workspace = true
language_models.workspace = true
line_ending_selector.workspace = true
log.workspace = true
markdown.workspace = true
markdown_preview.workspace = true
menu.workspace = true
migrator.workspace = true
mimalloc = { version = "0.1", optional = true }
nc.workspace = true
node_runtime.workspace = true
notifications.workspace = true
outline.workspace = true
outline_panel.workspace = true
parking_lot.workspace = true
paths.workspace = true
picker.workspace = true
profiling.workspace = true
project.workspace = true
project_panel.workspace = true
prompt_store.workspace = true
proto.workspace = true
recent_projects.workspace = true
release_channel.workspace = true
remote.workspace = true
reqwest.workspace = true
reqwest_client.workspace = true
rope.workspace = true
search.workspace = true
serde.workspace = true
serde_json.workspace = true
session.workspace = true
settings.workspace = true
settings_ui.workspace = true
shellexpand.workspace = true
smol.workspace = true
snippet_provider.workspace = true
sysinfo.workspace = true
tab_switcher.workspace = true
telemetry.workspace = true
telemetry_events.workspace = true
terminal_view.workspace = true
theme.workspace = true
theme_selector.workspace = true
time.workspace = true
time_format.workspace = true
title_bar.workspace = true
ztracing.workspace = true
tracing.workspace = true
ui.workspace = true
ui_prompt.workspace = true
url.workspace = true
urlencoding.workspace = true
util.workspace = true
uuid.workspace = true
vim.workspace = true
vim_mode_setting.workspace = true
watch.workspace = true
web_search.workspace = true
web_search_providers.workspace = true
workspace.workspace = true
zed_actions.workspace = true
zed_env_vars.workspace = true
zlog.workspace = true
zlog_settings.workspace = true
tree-sitter-md.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
etw_tracing.workspace = true
windows.workspace = true
gpui = { workspace = true, features = [
    "windows-manifest",
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui = { workspace = true, features = [
    "wayland",
    "x11",
] }
ashpd.workspace = true

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3.22"

[dev-dependencies]
audio.workspace = true
call = { workspace = true, features = ["test-support"] }
diagnostics.workspace = true
editor = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
image_viewer = { workspace = true, features = ["test-support"] }
itertools.workspace = true
language = { workspace = true, features = ["test-support"] }
languages = { workspace = true, features = ["load-grammars"] }
pretty_assertions.workspace = true
project = { workspace = true, features = ["test-support"] }
semver.workspace = true
terminal_view = { workspace = true, features = ["test-support"] }
title_bar = { workspace = true, features = ["test-support"] }
workspace = { workspace = true, features = ["test-support"] }
image.workspace = true
agent_ui = { workspace = true, features = ["test-support"] }
search = { workspace = true, features = ["test-support"] }

[package.metadata.bundle-dev]
icon = ["resources/app-icon-dev@2x.png", "resources/app-icon-dev.png"]
identifier = "dev.prism.Prism-Dev"
name = "Prism Dev"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["prism"]

[package.metadata.bundle-nightly]
icon = ["resources/app-icon-nightly@2x.png", "resources/app-icon-nightly.png"]
identifier = "dev.prism.Prism-Nightly"
name = "Prism Nightly"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["prism"]

[package.metadata.bundle-preview]
icon = ["resources/app-icon-preview@2x.png", "resources/app-icon-preview.png"]
identifier = "dev.prism.Prism-Preview"
name = "Prism Preview"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["prism"]

[package.metadata.bundle-stable]
icon = ["resources/app-icon@2x.png", "resources/app-icon.png"]
identifier = "dev.prism.Prism"
name = "Prism"
osx_minimum_system_version = "10.15.7"
osx_info_plist_exts = ["resources/info/*"]
osx_url_schemes = ["prism"]

[package.metadata.cargo-machete]
ignored = ["profiling", "zstd", "tracing"]
